# Kaggle_NeurIPS2024

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
models/100_enc_tst/: best_model_fold0.pth  best_model_fold1.pth
neurips/data/: make_data_1dcnn.ipynb  make_data_CLM.ipynb  make_data_CLM.py  make_data_enc_with_block.ipynb  make_data_xgb.ipynb  nohup.out  open_zip.py
neurips/models/: train_1dcnn_torch.ipynb  train_Mamba.ipynb  train_XGB.ipynb  train_infer_1dcnn.ipynb
neurips/models/fold0/: snapshot_epoch_1.pth  snapshot_epoch_2.pth  snapshot_epoch_3.pth  snapshot_epoch_4.pth  snapshot_epoch_5.pth  snapshot_epoch_6.pth  snapshot_epoch_7.pth
neurips/models/fold1/: snapshot_epoch_1.pth  snapshot_epoch_2.pth
notebooks/: scrap.ipynb  scrap2.ipynb
